updated few elements

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="row">
           <div class="col-sm col-md-6">
             <div class="row pt-5">
-              <div class="roundImage1 col-sm"></div>
+              <div class="roundImage1 roundImg col-sm"></div>
               <div class="col-sm">
                 <div class="d-flex justify-content-start">
                   <div class="cosmeticBorder mb-2"></div>
@@ -225,7 +225,7 @@
           </div>
           <div class="col-sm col-md-6">
             <div class="row">
-              <div class="roundImage2 col-sm"></div>
+              <div class="roundImage2 roundImg col-sm"></div>
               <div class="col-sm">
                 <div class="d-flex justify-content-start">
                   <div class="cosmeticBorder mb-2"></div>
@@ -243,7 +243,7 @@
         <div class="row">
           <div class="col-md-6 col-sm">
             <div class="row pt-5">
-              <div class="roundImage3 col-sm"></div>
+              <div class="roundImage3 roundImg col-sm"></div>
               <div class="col-sm">
                 <div class="d-flex justify-content-start">
                   <div class="cosmeticBorder mb-2"></div>
@@ -259,7 +259,7 @@
           </div>
           <div class="col-md-6 col-sm">
             <div class="row">
-              <div class="roundImage4 col-sm"></div>
+              <div class="roundImage4 roundImg col-sm"></div>
               <div class="col-sm">
                 <div class="d-flex justify-content-start">
                   <div class="cosmeticBorder mb-2"></div>
